Fixed centering + Removed collapse option + Added number line height

--- a/src/block/number-box/style.scss
+++ b/src/block/number-box/style.scss
@@ -57,12 +57,10 @@
 	line-height: 2.5em;
 	box-sizing: content-box;
 	white-space: nowrap !important;
+	text-align: center;
 }
 .ugb-number-box--number-style-square .ugb-number-box__number {
 	border-radius: 0;
-}
-.ugb-number-box:not(.ugb-number-box--number-style-none) .ugb-number-box__number {
-	text-align: center !important;
 }
 .ugb-number-box--number-style-none .ugb-number-box__number {
 	display: block;
